--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
 </head>
 <body background="assets/images/wheat.png">
 
+    <!-- Couldn't figre out how to resize my header to fit at 1024px and make it consistently work down.  The same issue I had for this entire assignment-->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white; padding-top: 0px; padding-bottom: 0px;"> 
             <div class="container" style="background-color: white; padding-top: 0; padding-bottom: 0;"> 
                 <a class="navbar-brand" style="margin: 0;" href="https://codytdrew.github.io/">Cody Drew</a>
